# src/controllers/ingredients-controller.js
@@ -14,14 +14,41 @@ export function createIngredientController(service) {
      */
     async getIngredientById(request, reply) {
       const log = request.log;
-      const controllerLog = log.child({ module: "ingredients-controller" });
+      const childLog = log.child({ module: "getIngredientById-controller" });
 
       const { ingredientId } = request.params;
-      const ingredient = await service.getById(ingredientId, log);
+      const getIngredientResponse = await service.getIngredientById(
+        ingredientId,
+        log,
+      );
 
-      controllerLog.debug({ ingredient: ingredient });
+      childLog.debug({ getIngredientResponse: getIngredientResponse });
 
-      reply.send(ingredient);
+      reply.send(getIngredientResponse);
+    },
+
+    /**
+     * Handles POST /ingredients requests.
+     *
+     * @param {FastifyRequest} request - Fastify request object
+     * @param {FastifyReply} reply - Fastify reply object
+     */
+    async addIngredient(request, reply) {
+      const log = request.log;
+      const childLog = log.child({ module: "addIngredient-controller" });
+
+      const addIngredientRequestBody = request.body;
+      const addIngredientResponse = await service.addIngredient(
+        addIngredientRequestBody,
+        log,
+      );
+
+      childLog.debug(
+        { addIngredientResponse: addIngredientResponse },
+        "controller response",
+      );
+
+      reply.send(addIngredientResponse);
     },
   };
 }
